Archive2/33/598358e38b5fbd/output
main.cpp:9:2: error: expected ';' after struct
}
 ^
 ;
main.cpp:13:12: error: use of undeclared identifier 'std'
    static std::mutex mutex;
           ^
main.cpp:14:5: error: use of undeclared identifier 'std'
    std::unique_lock<std::mutex> lock(mutex, std::try_to_lock);
    ^
main.cpp:14:22: error: use of undeclared identifier 'std'
    std::unique_lock<std::mutex> lock(mutex, std::try_to_lock);
                     ^
main.cpp:17:10: error: use of undeclared identifier 'lock'
    if (!lock)
         ^
main.cpp:20:5: error: expected expression
    static bool first = true;    
    ^
main.cpp:23:9: error: use of undeclared identifier 'first'
    if (first) {
        ^
main.cpp:24:9: error: use of undeclared identifier 'first'
        first = false;
        ^
main.cpp:27:9: error: use of undeclared identifier 'may_throw'
        may_throw();
        ^
9 errors generated.
